; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_utf.c_svn_utf_cstring_from_utf8.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_utf.c_svn_utf_cstring_from_utf8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SVN_UTF_UTON_XLATE_HANDLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_utf_cstring_from_utf8(i8** %0, i8* %1, i32* %2) #0 {
  %4 = alloca i8**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i8** %0, i8*** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = call i32 @check_cstring_utf8(i8* %9, i32* %10)
  %12 = call i32 @SVN_ERR(i32 %11)
  %13 = load i32*, i32** %6, align 8
  %14 = call i32 @get_uton_xlate_handle_node(i32** %7, i32* %13)
  %15 = call i32 @SVN_ERR(i32 %14)
  %16 = load i8**, i8*** %4, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = call i32* @convert_cstring(i8** %16, i8* %17, i32* %18, i32* %19)
  store i32* %20, i32** %8, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = load i32, i32* @SVN_UTF_UTON_XLATE_HANDLE, align 4
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @put_xlate_handle_node(i32* %22, i32 %23, i32* %24)
  %26 = call i32* @svn_error_compose_create(i32* %21, i32 %25)
  store i32* %26, i32** %8, align 8
  %27 = load i32*, i32** %8, align 8
  ret i32* %27
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @check_cstring_utf8(i8*, i32*) #1

declare dso_local i32 @get_uton_xlate_handle_node(i32**, i32*) #1

declare dso_local i32* @convert_cstring(i8**, i8*, i32*, i32*) #1

declare dso_local i32* @svn_error_compose_create(i32*, i32) #1

declare dso_local i32 @put_xlate_handle_node(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
